# mitigate

./: .gitignore  batch.py  pyproject.toml
mitigate/: __main__.py  eval.py
mitigate/methods/: __init__.py  mitigation_method.py
mitigate/methods/cvpr25/: __init__.py
mitigate/methods/iclr24/: __init__.py  local_sd_pipeline.py  optim_utils.py
mitigate/methods/iclr25/: __init__.py  flipd_perturbations.json
mitigate/methods/ours/: __init__.py
mitigate/methods/ours/gpt/: template_mem_system.txt  template_mem_user.txt
mitigate/methods/ours/gpt_cache/: 00226d4a267e6e898dfc974ff90256b2_42.txt  00226d4a267e6e898dfc974ff90256b2_43.txt  00226d4a267e6e898dfc974ff90256b2_44.txt  00226d4a267e6e898dfc974ff90256b2_45.txt  005cd6d9933cc9310b634626c4c04f73_42.txt  005cd6d9933cc9310b634626c4c04f73_43.txt  005cd6d9933cc9310b634626c4c04f73_44.txt  005cd6d9933cc9310b634626c4c04f73_45.txt  00fdf9d5a8fb0606f2b6358d5ef9449b_42.txt  00fdf9d5a8fb0606f2b6358d5ef9449b_43.txt  00fdf9d5a8fb0606f2b6358d5ef9449b_44.txt  00fdf9d5a8fb0606f2b6358d5ef9449b_45.txt  0167290bd8908f0804f0bea7887b8a14_42.txt  0167290bd8908f0804f0bea7887b8a14_43.txt  0167290bd8908f0804f0bea7887b8a14_44.txt  0167290bd8908f0804f0bea7887b8a14_45.txt  016dc1e43af45e2bfa9960d9c04e05f4_42.txt  016dc1e43af45e2bfa9960d9c04e05f4_43.txt  016dc1e43af45e2bfa9960d9c04e05f4_44.txt  016dc1e43af45e2bfa9960d9c04e05f4_45.txt  0199ae541332ce4a2d76fc6248ff7746_42.txt  0199ae541332ce4a2d76fc6248ff7746_43.txt  0199ae541332ce4a2d76fc6248ff7746_44.txt  (+1976 more)
mitigate/prompts/: __init__.py  match_verbatim.json  memorized_500.jsonl
